[package]
name = "hashed"
authors = ["Milkey Mouse <milkeymouse@meme.institute>"]
description = "A Hashed<T> you can convert any T: Hash into and still do equality checks on"
repository = "https://github.com/milkey-mouse/hashed"
readme = "README.md"
version = "0.1.1"
license = "CC0-1.0"
keywords = ["hash", "comparison", "equality", "hashed", "wrapper"]
categories = ["data-structures"]
edition = "2018"

[dependencies]
num-traits = { version = "0.2", default-features = false, optional = true }

[features]
default = ["std"]
nightly = []
std = []
truncate = ["num-traits"]
